--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --accent: #00666b;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -114,17 +115,6 @@ h1 {
   margin: 100px 0;
 }
 
-h2 {
-  margin: 0;
-  color: var(--accent);
-  left: calc(50% + 130px);
-  font-size: 56px;
-  font-weight: 700;
-  letter-spacing: -3px;
-  line-height: 1.2;
-  position: absolute;
-}
-
 section {
   height: 100vh;
   display: flex;
@@ -136,13 +126,34 @@ section {
 }
 
 section > div {
-  width: 300px;
-  height: 400px;
+  width: 600px;
+  height: 450px;
   position: relative;
   max-height: 90vh;
   margin: 20px;
   background: var(--white);
   overflow: hidden;
+  background: var(--accent);
+  padding: 10px 20px;
+}
+
+section > h2 {
+  margin: 0;
+  color: var(--foreground);
+  left: calc(50% + 380px);
+  font-size: 56px;
+  font-weight: 700;
+  letter-spacing: -3px;
+  line-height: 1.2;
+  position: absolute;
+}
+
+section > img {
+  margin: 0;
+  left: calc(50% - 600px);
+  width: 200px;
+  height: 450px;
+  position: absolute;
 }
 
 .slide {
@@ -153,6 +164,12 @@ section > div {
   bottom: 0;
   width: 100%;
   height: 100%;
+  z-index: 50;
+}
+
+.slide-text {
+  z-index: 100;
+  position: relative;
 }
 
 .progress {
