--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,20 @@
   }
 }
 
+@font-face{
+  font-family: 'Mulish';
+  src:url(/app/fonts/Mulish.ttf);
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: 'Space';
+  src:url(/app/fonts/SpaceMono.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -39,6 +53,45 @@ p {
   font-size: 18px;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0) 1px,
+    var(--background) 1px
+  );
+  background-size: 4px 4px;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  -moz-backdrop-filter: blur(3px);
+  font-size: 14px;
+  line-height: 14px;
+  z-index: 200;
+}
+
+header h3 {
+  margin: 0 20px;
+  font-weight: bold;
+}
+
+header::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: var(--accent);
+  opacity: 0.2;
+}
+
 footer {
   position: fixed;
   bottom: 0;
@@ -48,7 +101,7 @@ footer {
   justify-content: flex-start;
   align-items: center;
   padding: 20px;
-  background-image: radial-gradient(
+  background-image: linear-gradient(
     rgba(0, 0, 0, 0) 1px,
     var(--background) 1px
   );
@@ -70,15 +123,6 @@ footer::before {
   height: 1px;
   background: var(--accent);
   opacity: 0.2;
-}
-
-footer svg {
-  margin-right: 20px;
-}
-
-footer a {
-  text-decoration: none;
-  color: var(--accent);
 }
 
 code {
@@ -105,7 +149,7 @@ code {
 html {
   scroll-snap-type: y mandatory;
 }
-
+/*
 h1 {
   font-size: 56px;
   font-weight: 700;
@@ -114,7 +158,7 @@ h1 {
   text-align: center;
   margin: 100px 0;
 }
-
+*/
 section {
   height: 100vh;
   display: flex;
