--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --accent: #00666b;
+  --main: #00666b;
+  --accent: #b2f11d;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -88,7 +89,7 @@ header::after {
   left: 0;
   right: 0;
   height: 1px;
-  background: var(--accent);
+  background: var(--main);
   opacity: 0.2;
 }
 
@@ -121,7 +122,7 @@ footer::before {
   left: 0;
   right: 0;
   height: 1px;
-  background: var(--accent);
+  background: var(--main);
   opacity: 0.2;
 }
 
@@ -138,7 +139,7 @@ code {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--accent);
+  background: var(--main);
   -webkit-border-radius: 1ex;
 }
 
@@ -177,7 +178,7 @@ section > div {
   margin: 20px;
   background: var(--white);
   overflow: hidden;
-  background-color: var(--accent);
+  background-color: var(--main);
   padding: 10px 20px;
 }
 
@@ -216,6 +217,20 @@ section > img {
 .slide-text {
   z-index: 100;
   position: relative;
+  text-align: justify;
+}
+
+.slide-text code {
+  background-color: var(--background);
+  color: var(--foreground);
+  border-radius: 5px;
+  padding: 0 5px;
+  transition: color .5s;
+}
+
+.slide-text code:hover {
+  color: var(--accent);
+  transition: color .5s;
 }
 
 .progress {
@@ -223,6 +238,6 @@ section > img {
   left: 0;
   right: 0;
   height: 5px;
-  background: var(--accent);
+  background: var(--main);
   bottom: 100px;
 }
