--- a/components/ui/containers/slides/styles.module.css
+++ b/components/ui/containers/slides/styles.module.css
@@ -23,7 +23,7 @@
 .slideTitle span {
     font-size: larger;
     font-weight: bold;
-    color: rgb(var(--background));
+    color: rgb(var(--accent-font));
     background-color: rgb(var(--accent));
     padding: 0 10px;
     border-radius: 20px;
