Ammended main view margins on phone Set max width for the slides to not exceed the screen width. Ruben Gomez Dopazo

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,7 +225,15 @@ section > h3 {
 
 .mainPage {
   margin: 0 auto;
-  width: 90%;
+  max-width: 90%;
+}
+
+@media screen and (max-width: 768px) {
+  .mainPage {
+    max-width: 100%;
+    margin: 0 5px;
+  }
+  
 }
 
 .title {
