--- a/components/ui/containers/slides/styles.module.css
+++ b/components/ui/containers/slides/styles.module.css
@@ -11,6 +11,7 @@
     padding: 1em;
     border: 1px solid rgb(var(--foreground));
     border-radius: 5px;
+    max-width: 100%;
 }
 
 .slideTitle {
