--- a/components/ui/containers/cards/styles.module.css
+++ b/components/ui/containers/cards/styles.module.css
@@ -8,7 +8,7 @@
 .card {
     display: flex;
     flex-direction: row;
-    background-color: var(--main);
+    background-color: var(--accent);
     width: 60vw;
     border-radius: 10px;
     padding: 2em 3em;
