--- a/components/ui/navbar/styles.module.css
+++ b/components/ui/navbar/styles.module.css
@@ -40,7 +40,7 @@
     left: 0;
     right: 0;
     height: 1px;
-    background: rgb(var(--main));
+    background: rgb(var(--accent));
     opacity: 0.2;
 }
 
@@ -56,6 +56,6 @@
 
 .navbarItem:hover:not(.active) {
     font-size: 17px;
-    color: rgb(var(--main));
+    color: rgb(var(--accent));
     transition: font-size .25s ease;
 }
