Redesign of work experience view (in progress) Still under some considerations. Ruben Gomez Dopazo

--- a/components/ui/containers/cards/styles.module.css
+++ b/components/ui/containers/cards/styles.module.css
@@ -37,3 +37,10 @@
 .card ul {
     list-style-type: "> ";
 }
+
+.cardImage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgb(var(--foreground));
+}
