--- a/components/ui/containers/cards/styles.module.css
+++ b/components/ui/containers/cards/styles.module.css
@@ -6,41 +6,46 @@
 }
 
 .card {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 300px auto;
+    gap: 20px;
     background-color: var(--accent);
-    width: 60vw;
+    width: 100%;
     border-radius: 10px;
     padding: 2em 3em;
 }
 
-.card > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-}
-
-.card > div:first-child {
-    flex: 30%;
-}
-
-.card > div:last-child {
-    flex: 70%;
-}
-
-.card img {
-    width: 80%;
-    border-radius: 10px;
-}
-
 .card ul {
     list-style-type: "> ";
+    padding-left: 20px;
 }
 
 .cardImage {
     display: flex;
+    height: 200px;
+    width: 300px;
+    padding: 10px;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(var(--foreground));
+    border: 2px solid rgb(var(--foreground));
+    border-radius: 10px;
+    background-color: white;
+    /* background: repeating-linear-gradient(45deg, rgb(var(--accent)), rgb(var(--accent)) 2px, rgb(var(--background)) 2px, rgb(var(--background)) 20px); */
+}
+
+.cardImage img {
+    color: black;
+    border-radius: 10px;
+}
+
+.cardDetails {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.cardDetailsTitle *{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
 }
