--- a/components/ui/containers/cards/styles.module.css
+++ b/components/ui/containers/cards/styles.module.css
@@ -21,12 +21,11 @@
 }
 
 .cardImage {
-    display: flex;
+    display:flex;
+    position: relative;
     height: 200px;
     width: 300px;
     padding: 10px;
-    align-items: center;
-    justify-content: center;
     border: 2px solid rgb(var(--foreground));
     border-radius: 10px;
     background-color: white;
@@ -35,7 +34,8 @@
 .cardImage img {
     color: black;
     border-radius: 10px;
-    width: 100%;
+    width: 90% !important;
+    margin: auto;
 }
 
 .cardDetails {
